// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__xfvkod0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_medium__bnlb224 styles__bnlb222"
                data-checked="true"
                data-invalid="false"
              >
                <input
                  aria-disabled="false"
                  checked=""
                  class="styles__bnlb22a"
                  id="_r_3_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_3_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_medium__bnlb224 styles__bnlb222"
                data-checked="false"
                data-invalid="false"
              >
                <input
                  aria-disabled="false"
                  class="styles__bnlb22a"
                  id="_r_9_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_9_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__xfvkod0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
          >
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_medium__bnlb224 styles__bnlb222"
                data-checked="true"
                data-invalid="false"
              >
                <input
                  aria-disabled="false"
                  checked=""
                  class="styles__bnlb22a"
                  id="_r_i_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_i_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_medium__bnlb224 styles__bnlb222"
                data-checked="false"
                data-invalid="false"
              >
                <input
                  aria-disabled="false"
                  class="styles__bnlb22a"
                  id="_r_o_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_o_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_1f_"
        class="styles__xfvkod0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_medium__bnlb224 styles__bnlb222"
                data-checked="true"
                data-invalid="true"
              >
                <input
                  aria-disabled="false"
                  checked=""
                  class="styles__bnlb22a"
                  id="_r_1i_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_1i_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_medium__bnlb224 styles__bnlb222"
                data-checked="false"
                data-invalid="true"
              >
                <input
                  aria-disabled="false"
                  class="styles__bnlb22a"
                  id="_r_1o_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_1o_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_1f_"
        role="status"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_u_"
        class="styles__xfvkod0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_medium__bnlb224 styles__bnlb222"
                data-checked="true"
                data-invalid="false"
              >
                <input
                  aria-disabled="false"
                  checked=""
                  class="styles__bnlb22a"
                  id="_r_11_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_11_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_medium__bnlb224 styles__bnlb222"
                data-checked="false"
                data-invalid="false"
              >
                <input
                  aria-disabled="false"
                  class="styles__bnlb22a"
                  id="_r_17_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_17_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_u_"
        role="status"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_20_"
        class="styles__xfvkod0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_small__bnlb223 styles__bnlb222"
                data-checked="true"
                data-invalid="true"
              >
                <input
                  aria-disabled="false"
                  checked=""
                  class="styles__bnlb22a"
                  id="_r_23_"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="8"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="8"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="6"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="4"
                    />
                  </g>
                </svg>
                <label
                  class="styles_small__bnlb226 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_23_"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-disabled="false"
                class="styles_small__bnlb223 styles__bnlb222"
                data-checked="false"
                data-invalid="true"
              >
                <input
                  aria-disabled="false"
                  class="styles__bnlb22a"
                  id="_r_29_"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="styles__bnlb22b"
                  viewBox="0 0 24 24"
                >
                  <title>
                    radio
                  </title>
                  <g>
                    <circle
                      class="styles__bnlb22e"
                      cx="12"
                      cy="12"
                      r="8"
                      stroke-width="6"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="8"
                      stroke-width="2"
                    />
                    <circle
                      class="styles__bnlb22d"
                      cx="12"
                      cy="12"
                      r="6"
                    />
                    <circle
                      class="styles__bnlb22c"
                      cx="12"
                      cy="12"
                      r="4"
                    />
                  </g>
                </svg>
                <label
                  class="styles_small__bnlb226 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                  for="_r_29_"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_20_"
        role="status"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
